// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processing Statement Journey - Processing Plant Address using Postcode lookup: Enter Postcode (Step 1) should take a snapshot of the PostcodeLookUp - (Step 1) 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <h1
        class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
      >
        What is the processing plant address?
      </h1>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <label
            class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
            for="postcode"
          >
            <span
              class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
            >
              Enter your postcode
            </span>
            <span
              class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
            >
              If you cannot find the address or you need to add a non-UK address, click the link 'Enter the address manually'
            </span>
            
            <input
              class="smallInput e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
              id="postcode"
              name="postcode"
              type="text"
              value=""
            />
          </label>
        </div>
      </div>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <button
          class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
          id="cancel"
          name="cancel"
          value="cancel"
        >
          Cancel
        </button>
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <button
            class="button"
            id="findAddress"
          >
            Find address
          </button>
        </div>
      </div>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-n58wva-StyledColumn e4u1u2g0"
        >
          <button
            class="button-dressed-as-link enter-address-manually-link"
            id="enter-address-manually-link"
          >
            Enter the address manually
          </button>
        </div>
      </div>
      <a
        href="/create-processing-statement/undefined/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storage Document Journey - Storage Facility Address using Postcode lookup: Manual Address (Step 3) should take a snapshot of the storage 1`] = `
<div>
  <div
    class="css-1l99ixu-OuterContainer e4u1u2g0"
  >
    <div
      class="css-n57fe4-InnerContainer e4u1u2g1"
    >
      <h1
        class="e1vcssft0 css-11nzzut-StyledHeader-StyledHoc e4u1u2g0"
      >
        What is the storage facility address?
      </h1>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <label
            class="e1vcssft0 e1vcssft0 css-5tg97n-StyledLabel-StyledHoc-StyledHoc e4u1u2g0"
            for="postcode"
          >
            <span
              class="e1vcssft0 css-3e01s4-StyledLabelText-StyledHoc e4u1u2g0"
            >
              Enter your postcode
            </span>
            <span
              class="e1vcssft0 css-1whl0n4-StyledHint-StyledHoc e4u1u2g0"
            >
              If you cannot find the address or you need to add a non-UK address, click the link 'Enter the address manually'
            </span>
            
            <input
              class="smallInput e1vcssft0 css-4n7f6s-StyledInput-StyledHoc e4u1u2g0"
              id="postcode"
              name="postcode"
              type="text"
              value=""
            />
          </label>
        </div>
      </div>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <button
          class="css-17uw1q2-StyledButton-StyledHoc e4u1u2g0"
          id="cancel"
          name="cancel"
          value="cancel"
        >
          Cancel
        </button>
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <button
            class="button"
            id="findAddress"
          >
            Find address
          </button>
        </div>
      </div>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-n58wva-StyledColumn e4u1u2g0"
        >
          <button
            class="button-dressed-as-link enter-address-manually-link"
            id="enter-address-manually-link"
          >
            Enter the address manually
          </button>
        </div>
      </div>
      <a
        href="/create-storage-document/progress"
        id="backToProgress"
      >
        Back to Your Progress
        <span
          class="govuk-visually-hidden"
        >
          back to your progress page link
        </span>
      </a>
      <div
        class="css-1lzr9ic-StyledRow e4u1u2g0"
      >
        <div
          class="css-1w80l5h-StyledColumn e4u1u2g0"
        >
          <hr
            class="help-link"
          />
          <h2
            class="e1vcssft0 css-162lx7h-StyledHeader-StyledHoc e4u1u2g0"
          >
            Need help?
          </h2>
          <a
            href="undefined"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get help exporting fish from the UK (gov.uk)
             
            <span
              class="govuk-visually-hidden"
            >
              (opens in new tab)
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
